<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".BookingActivity">

    <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="16dp">

                <TextView
                    android:id="@+id/confirmBookingTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Confirm booking"
                    android:textColor="@android:color/holo_red_dark"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="16dp"
                    android:layout_marginLeft="75dp"
                    android:layout_marginRight="16dp"
                    />

<!--                <TextView-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Service details"-->
<!--                    android:textSize="20sp"-->
<!--                    android:textStyle="bold" />-->

<!--                <TextView-->
<!--                    android:id="@+id/serviceNameTextView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="Service Name"-->
<!--                    android:paddingTop="8dp"-->
<!--                    android:textSize="16sp" />-->

<!--                <TextView-->
<!--                    android:id="@+id/serviceProviderTextView"-->
<!--                    android:layout_width="wrap_content"-->
<!--                    android:layout_height="wrap_content"-->
<!--                    android:text="provider"-->
<!--                    android:paddingTop="8dp"-->
<!--                    android:textSize="16sp" />-->

                <TextView
                    android:id="@+id/problemDescriptionTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/problem_description_title"
                    android:textSize="18sp"
                    android:textStyle="bold"

                    android:paddingTop="16dp" />

                <EditText
                    android:id="@+id/problemDescriptionTextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/problem_description_hint"
                    android:inputType="textMultiLine"
                    android:minLines="3"
                    android:maxLines="5"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="5dp"
                    android:paddingBottom="35dp"
                    android:layout_marginTop="10dp"
                    android:gravity="start"
                    android:background="@drawable/edittext_background"/>
                <LinearLayout
                    android:id="@+id/file_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="16dp">



                    <Button
                        android:id="@+id/file_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Browse File"
                        android:background="@drawable/button_background"
                        android:textColor="@color/white"/>

                    <TextView
                        android:id="@+id/file_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Choose File"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="16dp"/>
                    

                </LinearLayout>






                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="16dp"
                    android:text="@string/time_slot"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <RadioGroup
                    android:id="@+id/timeSlotRadioGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingTop="8dp">

                    <RadioButton
                        android:id="@+id/radioButton1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_slot_1" />

                    <RadioButton
                        android:id="@+id/radioButton2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_slot_2" />

                    <RadioButton
                        android:id="@+id/radioButton3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_slot_3" />

                    <RadioButton
                        android:id="@+id/radioButton4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/time_slot_4" />
                </RadioGroup>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Enter Your Address"
                    android:textSize="20sp"
                    android:textStyle="bold"

                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="16dp"/>

                <EditText
                    android:id="@+id/buildingNumberEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="House No"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="16dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="16dp"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/streetAreaEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="area or  street"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"/>
                <EditText
                    android:id="@+id/localityEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/locality_hint"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="10dp"

                    android:inputType="text"/>

                <EditText
                    android:id="@+id/stateEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/state_hint"
                    android:background="@drawable/edittext_background"
                    android:paddingStart="16dp"
                    android:layout_marginTop="10dp"
                    android:paddingEnd="16dp"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/countryEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/country_hint"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:inputType="text"/>

                <EditText
                    android:id="@+id/pincodeEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:hint="@string/pincode_hint"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:inputType="number"/>

                <EditText
                    android:id="@+id/phoneEditText"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/edittext_background"
                    android:hint="Mobile Number"
                    android:inputType="phone"/>

                <com.google.android.gms.maps.MapView
                    android:id="@+id/mapView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    map:cameraZoom="15"
                    android:layout_marginTop="10dp"/>




                <Button
                    android:id="@+id/bookNowButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="Book Now"
                    android:textColor="@color/white"
                    android:background="@drawable/round_back_primary_15" />

            </LinearLayout>
        </ScrollView>


</RelativeLayout>